token max duration taken from client and max 1 hour
